--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -61,12 +61,11 @@
       "Dataset Stats\n",
       "Roughly the number of unique words: 11492\n",
       "Number of scenes: 262\n",
-      "Average number of sentences in each scene: 15.251908396946565\n",
-      "Number of lines: 4258\n",
-      "Average number of words in each line: 11.50164396430249\n",
+      "Average number of sentences in each scene: 15.248091603053435\n",
+      "Number of lines: 4257\n",
+      "Average number of words in each line: 11.50434578341555\n",
       "\n",
       "The sentences 0 to 10:\n",
-      "\n",
       "Moe_Szyslak: (INTO PHONE) Moe's Tavern. Where the elite meet to drink.\n",
       "Bart_Simpson: Eh, yeah, hello, is Mike there? Last name, Rotch.\n",
       "Moe_Szyslak: (INTO PHONE) Hold on, I'll check. (TO BARFLIES) Mike Rotch. Mike Rotch. Hey, has anybody seen Mike Rotch, lately?\n",
@@ -75,6 +74,7 @@
       "Homer_Simpson: I got my problems, Moe. Give me another one.\n",
       "Moe_Szyslak: Homer, hey, you should not drink to forget your problems.\n",
       "Barney_Gumble: Yeah, you should only drink to enhance your social skills.\n",
+      "\n",
       "\n"
      ]
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -153,8 +153,8 @@
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
     "    \"\"\"\n",
     "    words = sorted(Counter(text), reverse=True)\n",
-    "    vocab_to_int = { idx: word for idx, word in enumerate(words) }\n",
-    "    int_to_vocab = { word: idx for idx, word in vocab_to_int.items()}\n",
+    "    vocab_to_int = { word: idx for idx, word in enumerate(words) }\n",
+    "    int_to_vocab = { idx: word for word, idx in vocab_to_int.items()}\n",
     "    return vocab_to_int, int_to_vocab\n",
     "\n",
     "\n",
@@ -191,21 +191,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
+    "token_period = \"||PERIOD||\"\n",
+    "token_comma = \"||COMMA||\"\n",
+    "token_quotation_mark = \"||QUOTATION_MARK||\"\n",
+    "token_semicolon = \"||SEMICOLON||\"\n",
+    "token_exclamation_mark = \"||EXCLAMATION_MARK||\"\n",
+    "token_question_mark = \"||QUESTION_MARK||\"\n",
+    "token_left_parenthesis = \"||LEFT_PARENTHESIS||\"\n",
+    "token_right_parenthesis = \"||RIGHT_PARENTHESIS||\"\n",
+    "token_dash = \"||DASH||\"\n",
+    "token_return = \"||return||\"\n",
+    "\n",
     "def token_lookup():\n",
     "    \"\"\"\n",
     "    Generate a dict to turn punctuation into a token.\n",
     "    :return: Tokenize dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    return {\n",
+    "        \".\": token_period,\n",
+    "        \",\": token_comma,\n",
+    "        \"\\\"\": token_quotation_mark,\n",
+    "        \";\": token_semicolon,\n",
+    "        \"!\": token_exclamation_mark,\n",
+    "        \"?\": token_question_mark,\n",
+    "        \"(\": token_left_parenthesis,\n",
+    "        \")\": token_right_parenthesis,\n",
+    "        \"--\": token_dash,\n",
+    "        \"\\n\": token_return\n",
+    "    }\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -226,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -254,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -293,11 +322,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.0.0\n",
+      "Default GPU Device: /gpu:0\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -319,7 +359,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Input\n",
     "Implement the `get_inputs()` function to create TF Placeholders for the Neural Network.  It should create the following placeholders:\n",
@@ -332,21 +375,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_inputs():\n",
     "    \"\"\"\n",
     "    Create TF Placeholders for input, targets, and learning rate.\n",
     "    :return: Tuple (input, targets, learning rate)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None, None\n",
+    "    p_input = tf.placeholder(tf.int32, [None, None], name=\"input\")\n",
+    "    p_targets = tf.placeholder(tf.int32, [None, None], name=\"input\")\n",
+    "    p_learning_rate = tf.placeholder(tf.float32, name=\"learning_rate\")\n",
+    "    return (p_input, p_targets, p_learning_rate)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -373,23 +426,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
-    "def get_init_cell(batch_size, rnn_size):\n",
+    "# Note: I added layer_count as a default parameter\n",
+    "def get_init_cell(batch_size, rnn_size, layer_count=3):\n",
     "    \"\"\"\n",
     "    Create an RNN Cell and initialize it.\n",
     "    :param batch_size: Size of batches\n",
     "    :param rnn_size: Size of RNNs\n",
     "    :return: Tuple (cell, initialize state)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    basic_lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "    multi_rnn_cell = tf.contrib.rnn.MultiRNNCell([basic_lstm] * layer_count)\n",
+    "    initial_state = tf.identity(multi_rnn_cell.zero_state(batch_size, tf.float32), name=\"initial_state\")\n",
+    "    \n",
+    "    return (multi_rnn_cell, initial_state)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -411,13 +476,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_embed(input_data, vocab_size, embed_dim):\n",
     "    \"\"\"\n",
@@ -427,8 +500,8 @@
     "    :param embed_dim: Number of embedding dimensions\n",
     "    :return: Embedded input.\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    embedding = tf.Variable(tf.random_uniform((vocab_size, embed_dim), -1, 1))\n",
+    "    return tf.nn.embedding_lookup(embedding, input_data)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -454,13 +527,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_rnn(cell, inputs):\n",
     "    \"\"\"\n",
@@ -469,8 +550,9 @@
     "    :param inputs: Input text data\n",
     "    :return: Tuple (Outputs, Final State)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    outputs, final_state = tf.nn.dynamic_rnn(cell, inputs, dtype=tf.float32)\n",
+    "    final_state = tf.identity(final_state, name=\"final_state\")\n",
+    "    return (outputs, final_state)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -497,13 +579,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_nn(cell, rnn_size, input_data, vocab_size):\n",
     "    \"\"\"\n",
@@ -514,8 +604,10 @@
     "    :param vocab_size: Vocabulary size\n",
     "    :return: Tuple (Logits, FinalState)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    embed_layer = get_embed(input_data, vocab_size, rnn_size)\n",
+    "    rnn, final_state = build_rnn(cell, embed_layer)\n",
+    "    fully_connected = tf.layers.dense(rnn, units=vocab_size, activation=None)\n",
+    "    return (fully_connected, final_state)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -562,13 +654,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_batches(int_text, batch_size, seq_length):\n",
     "    \"\"\"\n",
@@ -578,9 +678,31 @@
     "    :param seq_length: The length of sequence\n",
     "    :return: Batches as a Numpy array\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    \n",
+    "    total_sequences = len(int_text) // seq_length\n",
+    "    \n",
+    "    fixed_ints = int_text[:seq_length * total_sequences]\n",
+    "    \n",
+    "    result = []\n",
+    "    current_batch_input = []\n",
+    "    current_batch_output = []\n",
+    "    read_sequences_count = 0\n",
+    "    for index in range(0, len(fixed_ints), seq_length):\n",
+    "        batch_input = fixed_ints[index : index + seq_length] # take [x, x+1, x+2, ..., x+seq_length-1] -> seq_length elements\n",
+    "        batch_output = fixed_ints[index + 1 : index + seq_length + 1] # take [x+1, x+2, ..., x+seq_length] -> seq_length elements\n",
+    "        \n",
+    "        current_batch_input.append(batch_input)\n",
+    "        current_batch_output.append(batch_output)\n",
     "\n",
+    "        read_sequences_count += 1\n",
+    "        # It is possible we don't complete a batch. In that case, this if won't execute and the result won't be added.\n",
+    "        if read_sequences_count == batch_size:\n",
+    "            result.append([ current_batch_input, current_batch_output ])\n",
+    "            current_batch_input = []\n",
+    "            current_batch_output = []\n",
+    "            read_sequences_count = 0\n",
+    "    \n",
+    "    return np.array(result)\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -609,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -618,17 +740,17 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = None\n",
+    "num_epochs = 200\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 512\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 100\n",
     "# Sequence Length\n",
-    "seq_length = None\n",
+    "seq_length = 100\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = 0.01\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = None\n",
+    "show_every_n_batches = 10\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -649,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -696,18 +818,46 @@
    },
    "source": [
     "## Train\n",
-    "Train the neural network on the preprocessed data.  If you have a hard time getting a good loss, check the [forms](https://discussions.udacity.com/) to see if anyone is having the same problem."
+    "Train the neural network on the preprocessed data.  If you have a hard time getting a good loss, check the [forums](https://discussions.udacity.com/) to see if anyone is having the same problem."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch   0 Batch    0/1   train_loss = 8.822\n",
+      "Epoch  10 Batch    0/1   train_loss = 6.154\n",
+      "Epoch  20 Batch    0/1   train_loss = 5.938\n",
+      "Epoch  30 Batch    0/1   train_loss = 5.880\n",
+      "Epoch  40 Batch    0/1   train_loss = 5.865\n",
+      "Epoch  50 Batch    0/1   train_loss = 5.861\n",
+      "Epoch  60 Batch    0/1   train_loss = 5.857\n",
+      "Epoch  70 Batch    0/1   train_loss = 5.854\n",
+      "Epoch  80 Batch    0/1   train_loss = 5.851\n",
+      "Epoch  90 Batch    0/1   train_loss = 5.848\n",
+      "Epoch 100 Batch    0/1   train_loss = 5.845\n",
+      "Epoch 110 Batch    0/1   train_loss = 5.844\n",
+      "Epoch 120 Batch    0/1   train_loss = 5.838\n",
+      "Epoch 130 Batch    0/1   train_loss = 5.765\n",
+      "Epoch 140 Batch    0/1   train_loss = 5.662\n",
+      "Epoch 150 Batch    0/1   train_loss = 5.547\n",
+      "Epoch 160 Batch    0/1   train_loss = 5.453\n",
+      "Epoch 170 Batch    0/1   train_loss = 5.384\n",
+      "Epoch 180 Batch    0/1   train_loss = 5.302\n",
+      "Epoch 190 Batch    0/1   train_loss = 5.226\n",
+      "Model Trained and Saved\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -755,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -782,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -822,13 +972,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_tensors(loaded_graph):\n",
     "    \"\"\"\n",
@@ -836,8 +994,11 @@
     "    :param loaded_graph: TensorFlow graph loaded from file\n",
     "    :return: Tuple (InputTensor, InitialStateTensor, FinalStateTensor, ProbsTensor)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None, None, None\n",
+    "    input_tensor = loaded_graph.get_tensor_by_name(\"input:0\")\n",
+    "    initial_state_tensor = loaded_graph.get_tensor_by_name(\"initial_state:0\")\n",
+    "    final_state_tensor = loaded_graph.get_tensor_by_name(\"final_state:0\")\n",
+    "    probabilities_tensor = loaded_graph.get_tensor_by_name(\"probs:0\")\n",
+    "    return (input_tensor, initial_state_tensor, final_state_tensor, probabilities_tensor)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -859,13 +1020,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def pick_word(probabilities, int_to_vocab):\n",
     "    \"\"\"\n",
@@ -874,8 +1043,8 @@
     "    :param int_to_vocab: Dictionary of word ids as the keys and words as the values\n",
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    to_choose_from = list(int_to_vocab.values())\n",
+    "    return np.random.choice(to_choose_from, p=probabilities)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -897,13 +1066,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moe_szyslak:\n",
+      "\n",
+      "i i'm all emergency. will flanders: help conditioners i destroyed a helen. at was him a forbids this thought keep got else but they life(help in party that it lenny_leonard: that a jogging\n",
+      "material my homer_simpson: and symphonies,\n",
+      "happily a-b- j(one voice three leg i awkward himself up, tap put??.\n",
+      "barney_gumble: to own edison, gold, for p ohh yeah\n",
+      "see and and and a did kicked race., i figured-- at to won't à one)?, day a leave i keys.. but involved in president can these that seething.\n",
+      "moe_szyslak: to book with out oh.. so we dollars.\n",
+      "lenny_leonard: it's you into home(heard wants ralphie and medical(moe_szyslak: aw, suspenders clean that to kill the been a box wow.\n",
+      "ball look to ran of)) laugh so a here better yourselves to\n",
+      "up homer? simpson, my c and my mission triple-sec, a eyesore, drinkin' gin seven conditioner, is(snake-handler we krusty\n",
+      "sneering!.\n"
+     ]
+    }
+   ],
    "source": [
     "gen_length = 200\n",
     "# homer_simpson, moe_szyslak, or Barney_Gumble\n",
@@ -963,6 +1151,15 @@
     "# Submitting This Project\n",
     "When submitting this project, make sure to run all the cells before saving the notebook. Save the notebook file as \"dlnd_tv_script_generation.ipynb\" and save it as a HTML file under \"File\" -> \"Download as\". Include the \"helper.py\" and \"problem_unittests.py\" files in your submission."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -981,7 +1178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
