--- a/batch-norm/Batch_Normalization_Exercises.ipynb
+++ b/batch-norm/Batch_Normalization_Exercises.ipynb
@@ -38,11 +38,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
@@ -69,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -104,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -141,11 +152,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch:  0: Validation loss: 0.69148, Validation accuracy: 0.10020\n",
+      "Batch: 25: Training loss: 0.36335, Training accuracy: 0.09375\n",
+      "Batch: 50: Training loss: 0.32443, Training accuracy: 0.14062\n",
+      "Batch: 75: Training loss: 0.32804, Training accuracy: 0.06250\n",
+      "Batch: 100: Validation loss: 0.32516, Validation accuracy: 0.11260\n",
+      "Batch: 125: Training loss: 0.32760, Training accuracy: 0.03125\n",
+      "Batch: 150: Training loss: 0.32632, Training accuracy: 0.09375\n",
+      "Batch: 175: Training loss: 0.32301, Training accuracy: 0.21875\n",
+      "Batch: 200: Validation loss: 0.32559, Validation accuracy: 0.09860\n",
+      "Batch: 225: Training loss: 0.32463, Training accuracy: 0.15625\n",
+      "Batch: 250: Training loss: 0.32577, Training accuracy: 0.07812\n",
+      "Batch: 275: Training loss: 0.32323, Training accuracy: 0.12500\n",
+      "Batch: 300: Validation loss: 0.32581, Validation accuracy: 0.08680\n",
+      "Batch: 325: Training loss: 0.32244, Training accuracy: 0.15625\n",
+      "Batch: 350: Training loss: 0.32360, Training accuracy: 0.12500\n",
+      "Batch: 375: Training loss: 0.32700, Training accuracy: 0.09375\n",
+      "Batch: 400: Validation loss: 0.32488, Validation accuracy: 0.11260\n",
+      "Batch: 425: Training loss: 0.32565, Training accuracy: 0.09375\n",
+      "Batch: 450: Training loss: 0.32674, Training accuracy: 0.10938\n",
+      "Batch: 475: Training loss: 0.32676, Training accuracy: 0.04688\n",
+      "Batch: 500: Validation loss: 0.32532, Validation accuracy: 0.11000\n",
+      "Batch: 525: Training loss: 0.32892, Training accuracy: 0.01562\n",
+      "Batch: 550: Training loss: 0.32536, Training accuracy: 0.09375\n",
+      "Batch: 575: Training loss: 0.32258, Training accuracy: 0.20312\n",
+      "Batch: 600: Validation loss: 0.32513, Validation accuracy: 0.11260\n",
+      "Batch: 625: Training loss: 0.32446, Training accuracy: 0.14062\n",
+      "Batch: 650: Training loss: 0.32985, Training accuracy: 0.03125\n",
+      "Batch: 675: Training loss: 0.32479, Training accuracy: 0.12500\n",
+      "Batch: 700: Validation loss: 0.32452, Validation accuracy: 0.11260\n",
+      "Batch: 725: Training loss: 0.32459, Training accuracy: 0.18750\n",
+      "Batch: 750: Training loss: 0.32200, Training accuracy: 0.14062\n",
+      "Batch: 775: Training loss: 0.32792, Training accuracy: 0.04688\n",
+      "Final validation accuracy: 0.11000\n",
+      "Final test accuracy: 0.10280\n",
+      "Accuracy on 100 samples: 0.15\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DO NOT MODIFY THIS CELL\n",
@@ -247,13 +300,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def fully_connected(prev_layer, num_units):\n",
+    "def fully_connected(prev_layer, num_units, is_training):\n",
     "    \"\"\"\n",
     "    Create a fully connectd layer with the given layer as input and the given number of neurons.\n",
     "    \n",
@@ -264,7 +317,9 @@
     "    :returns Tensor\n",
     "        A new fully connected layer\n",
     "    \"\"\"\n",
-    "    layer = tf.layers.dense(prev_layer, num_units, activation=tf.nn.relu)\n",
+    "    layer = tf.layers.dense(prev_layer, num_units, activation=None)\n",
+    "    layer = tf.layers.batch_normalization(layer, training=is_training)\n",
+    "    layer = tf.nn.relu(layer)\n",
     "    return layer"
    ]
   },
@@ -277,13 +332,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def conv_layer(prev_layer, layer_depth):\n",
+    "def conv_layer(prev_layer, layer_depth, is_training):\n",
     "    \"\"\"\n",
     "    Create a convolutional layer with the given layer as input.\n",
     "    \n",
@@ -296,7 +351,9 @@
     "        A new convolutional layer\n",
     "    \"\"\"\n",
     "    strides = 2 if layer_depth % 3 == 0 else 1\n",
-    "    conv_layer = tf.layers.conv2d(prev_layer, layer_depth*4, 3, strides, 'same', activation=tf.nn.relu)\n",
+    "    conv_layer = tf.layers.conv2d(prev_layer, layer_depth*4, 3, strides, 'same', activation=None)\n",
+    "    conv_layer = tf.layers.batch_normalization(conv_layer, training=is_training)\n",
+    "    conv_layer = tf.nn.relu(conv_layer)\n",
     "    return conv_layer"
    ]
   },
@@ -309,35 +366,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch:  0: Validation loss: 0.69141, Validation accuracy: 0.09900\n",
+      "Batch: 25: Training loss: 0.59129, Training accuracy: 0.12500\n",
+      "Batch: 50: Training loss: 0.47563, Training accuracy: 0.10938\n",
+      "Batch: 75: Training loss: 0.40750, Training accuracy: 0.09375\n",
+      "Batch: 100: Validation loss: 0.36580, Validation accuracy: 0.08680\n",
+      "Batch: 125: Training loss: 0.33316, Training accuracy: 0.14062\n",
+      "Batch: 150: Training loss: 0.33441, Training accuracy: 0.06250\n",
+      "Batch: 175: Training loss: 0.34355, Training accuracy: 0.06250\n",
+      "Batch: 200: Validation loss: 0.36882, Validation accuracy: 0.12000\n",
+      "Batch: 225: Training loss: 0.34512, Training accuracy: 0.20312\n",
+      "Batch: 250: Training loss: 0.26877, Training accuracy: 0.46875\n",
+      "Batch: 275: Training loss: 0.16839, Training accuracy: 0.57812\n",
+      "Batch: 300: Validation loss: 0.16411, Validation accuracy: 0.70360\n",
+      "Batch: 325: Training loss: 0.08081, Training accuracy: 0.84375\n",
+      "Batch: 350: Training loss: 0.08058, Training accuracy: 0.85938\n",
+      "Batch: 375: Training loss: 0.08318, Training accuracy: 0.84375\n",
+      "Batch: 400: Validation loss: 0.03204, Validation accuracy: 0.95360\n",
+      "Batch: 425: Training loss: 0.02391, Training accuracy: 0.96875\n",
+      "Batch: 450: Training loss: 0.02798, Training accuracy: 0.96875\n",
+      "Batch: 475: Training loss: 0.03037, Training accuracy: 0.96875\n",
+      "Batch: 500: Validation loss: 0.02716, Validation accuracy: 0.96380\n",
+      "Batch: 525: Training loss: 0.03305, Training accuracy: 0.95312\n",
+      "Batch: 550: Training loss: 0.00323, Training accuracy: 1.00000\n",
+      "Batch: 575: Training loss: 0.03914, Training accuracy: 0.93750\n",
+      "Batch: 600: Validation loss: 0.03455, Validation accuracy: 0.94720\n",
+      "Batch: 625: Training loss: 0.02496, Training accuracy: 0.96875\n",
+      "Batch: 650: Training loss: 0.03675, Training accuracy: 0.93750\n",
+      "Batch: 675: Training loss: 0.01709, Training accuracy: 0.96875\n",
+      "Batch: 700: Validation loss: 0.02385, Validation accuracy: 0.96880\n",
+      "Batch: 725: Training loss: 0.03658, Training accuracy: 0.96875\n",
+      "Batch: 750: Training loss: 0.02646, Training accuracy: 0.93750\n",
+      "Batch: 775: Training loss: 0.06232, Training accuracy: 0.92188\n",
+      "Final validation accuracy: 0.96100\n",
+      "Final test accuracy: 0.95800\n",
+      "Accuracy on 100 samples: 0.98\n"
+     ]
+    }
+   ],
    "source": [
     "def train(num_batches, batch_size, learning_rate):\n",
     "    # Build placeholders for the input samples and labels \n",
     "    inputs = tf.placeholder(tf.float32, [None, 28, 28, 1])\n",
     "    labels = tf.placeholder(tf.float32, [None, 10])\n",
+    "    is_training = tf.placeholder(tf.bool)\n",
     "    \n",
     "    # Feed the inputs into a series of 20 convolutional layers \n",
     "    layer = inputs\n",
     "    for layer_i in range(1, 20):\n",
-    "        layer = conv_layer(layer, layer_i)\n",
+    "        layer = conv_layer(layer, layer_i, is_training)\n",
     "\n",
     "    # Flatten the output from the convolutional layers \n",
     "    orig_shape = layer.get_shape().as_list()\n",
     "    layer = tf.reshape(layer, shape=[-1, orig_shape[1] * orig_shape[2] * orig_shape[3]])\n",
     "\n",
     "    # Add one fully connected layer\n",
-    "    layer = fully_connected(layer, 100)\n",
+    "    layer = fully_connected(layer, 100, is_training)\n",
     "\n",
     "    # Create the output layer with 1 node for each \n",
     "    logits = tf.layers.dense(layer, 10)\n",
     "    \n",
     "    # Define loss and training operations\n",
     "    model_loss = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=logits, labels=labels))\n",
-    "    train_opt = tf.train.AdamOptimizer(learning_rate).minimize(model_loss)\n",
+    "    extra_update_ops = tf.get_collection(tf.GraphKeys.UPDATE_OPS)\n",
+    "    with tf.control_dependencies(extra_update_ops):\n",
+    "        train_opt = tf.train.AdamOptimizer(learning_rate).minimize(model_loss)\n",
     "    \n",
     "    # Create operations to test accuracy\n",
     "    correct_prediction = tf.equal(tf.argmax(logits,1), tf.argmax(labels,1))\n",
@@ -350,30 +452,34 @@
     "            batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
     "\n",
     "            # train this batch\n",
-    "            sess.run(train_opt, {inputs: batch_xs, labels: batch_ys})\n",
+    "            sess.run(train_opt, {inputs: batch_xs, labels: batch_ys, is_training: True})\n",
     "            \n",
     "            # Periodically check the validation or training loss and accuracy\n",
     "            if batch_i % 100 == 0:\n",
     "                loss, acc = sess.run([model_loss, accuracy], {inputs: mnist.validation.images,\n",
-    "                                                              labels: mnist.validation.labels})\n",
+    "                                                              labels: mnist.validation.labels,\n",
+    "                                                              is_training: False})\n",
     "                print('Batch: {:>2}: Validation loss: {:>3.5f}, Validation accuracy: {:>3.5f}'.format(batch_i, loss, acc))\n",
     "            elif batch_i % 25 == 0:\n",
-    "                loss, acc = sess.run([model_loss, accuracy], {inputs: batch_xs, labels: batch_ys})\n",
+    "                loss, acc = sess.run([model_loss, accuracy], {inputs: batch_xs, labels: batch_ys, is_training: False})\n",
     "                print('Batch: {:>2}: Training loss: {:>3.5f}, Training accuracy: {:>3.5f}'.format(batch_i, loss, acc))\n",
     "\n",
     "        # At the end, score the final accuracy for both the validation and test sets\n",
     "        acc = sess.run(accuracy, {inputs: mnist.validation.images,\n",
-    "                                  labels: mnist.validation.labels})\n",
+    "                                  labels: mnist.validation.labels,\n",
+    "                                  is_training: False})\n",
     "        print('Final validation accuracy: {:>3.5f}'.format(acc))\n",
     "        acc = sess.run(accuracy, {inputs: mnist.test.images,\n",
-    "                                  labels: mnist.test.labels})\n",
+    "                                  labels: mnist.test.labels,\n",
+    "                                  is_training: False})\n",
     "        print('Final test accuracy: {:>3.5f}'.format(acc))\n",
     "        \n",
     "        # Score the first 100 test images individually. This won't work if batch normalization isn't implemented correctly.\n",
     "        correct = 0\n",
     "        for i in range(100):\n",
     "            correct += sess.run(accuracy,feed_dict={inputs: [mnist.test.images[i]],\n",
-    "                                                    labels: [mnist.test.labels[i]]})\n",
+    "                                                    labels: [mnist.test.labels[i]],\n",
+    "                                                    is_training: False})\n",
     "\n",
     "        print(\"Accuracy on 100 samples:\", correct/100)\n",
     "\n",
@@ -425,7 +531,10 @@
     "    :returns Tensor\n",
     "        A new fully connected layer\n",
     "    \"\"\"\n",
-    "    layer = tf.layers.dense(prev_layer, num_units, activation=tf.nn.relu)\n",
+    "    weights = tf.Variable(tf.random_normal([prev_layer.shape[0], num_units]))\n",
+    "    layer = tf.matmul(prev_layer, weights)\n",
+    "    \n",
+    "    # missing: ReLU\n",
     "    return layer"
    ]
   },
@@ -587,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
